# pyrubberband

./: .gitignore  .travis.yml  .travis_dependencies.sh  AUTHORS.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  setup.cfg  setup.py
.github/workflows/: ci-minimal.yml  ci.yml  publish.yml
docs/: Makefile  api.rst  changes.rst  conf.py  index.rst  requirements.txt
pyrubberband/: __init__.py  pyrb.py  version.py
tests/: test_pyrb.py
