[tool:pytest]
addopts = --ignore docs/conf.py --cov-report term-missing --cov pyrubberband


[metadata]
name = pyrubberband
author = Brian McFee
author_email = brian.mcfee@nyu.edu
version = attr: pyrubberband.version.version
url = http://github.com/bmcfee/pyrubberband
download_url = http://github.com/bmcfee/pyrubberband/releases
description = Python module to wrap rubberband
long_description = A python module to wrap rubberband.
keywords = audio, music, sound
license = ISC
license_files = LICENSE
classifiers =
    License :: OSI Approved :: ISC License (ISCL)
    Programming Language :: Python
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Multimedia :: Sound/Audio :: Analysis
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12


[options]
packages = find:
install_package_data = True
python_requires = >= 3.6
install_requires =
    numpy
    six
    soundfile >= 0.12.1

[options.extras_require]
docs =
    numpydoc
tests =
    pytest
    pytest-cov
    contextlib2
